<resources>
    <!--home-->
    <string name="app_name">油品惠</string>
    <string name="nothing"></string>
    <string name="maintain">车辆保养</string>
    <string name="cosmetology">汽车美容</string>
    <string name="insurance">车险办理</string>
    <string name="drive">代驾</string>
    <string name="rescue">道路救援</string>
    <string name="lllegal">违章查询</string>
    <string name="active">活动</string>
    <string name="discount_active">优惠活动</string>
    <string name="qrcode">我的二维码</string>
    <string name="bind">绑定加油站</string>
    <string name="loginor">登录/注册</string>
    <string name="oilprice0">0</string>
    <string name="oilprice92">92</string>
    <string name="oilprice95">95</string>
    <string name="oilprice98">98</string>
    <string name="oilprice">#</string>
    <string name="defprice">0.0</string>
    <string name="myintegral">我的积分</string>
    <string name="myintegral_">我的积分：</string>
    <string name="integral">积分</string>
    <string name="integral_">积分：</string>
    <string name="exchange">兑换记录</string>
    <string name="life">品质生活</string>
    <string name="cars">汽车用品</string>
    <string name="customized">私人定制</string>
    <string name="pleaseselect">请选择</string>
    <string name="bindnote">多个加油站只能绑定一个，解绑需要三个月。</string>
    <string name="bindenter">绑定</string>
    <string name="bindhint">请输入您要绑定的加油站</string>
    <string name="station_info">加油站详情</string>
    <!--mine-->
    <string name="perfect">完善资料</string>
    <string name="myorder">我的订单</string>
    <string name="mycard">我的卡券</string>
    <string name="myspeak">我的评论</string>
    <string name="lllinfo">积分详情</string>
    <string name="lllgame">积分小游戏</string>
    <string name="myshare">邀请有礼</string>
    <string name="myhis">加油记录</string>
    <string name="mysign">签到有礼</string>
    <string name="doubt">签到说明</string>
    <string name="set">设置</string>
    <string name="sendmsg">推送通知</string>
    <string name="ccache">清理缓存</string>
    <string name="about">关于我们</string>
    <string name="edition">当前版本</string>
    <string name="exit">退出登录</string>
    <string name="signcalendar">签到</string>
    <string name="savesign">连续签到礼包</string>
    <string name="seesign">查看礼包</string>
    <string name="sign_price_list">领取记录</string>
    <string name="sign5">连续签到5天</string>
    <string name="sign10">连续签到10天</string>
    <string name="sign15">连续签到15天</string>
    <string name="signgetprice">领取奖品</string>
    <string name="signnot">签到次数不足</string>
    <string name="nowlll">当前积分:0</string>
    <string name="save">保存</string>
    <string name="agreement">用户协议</string>
    <string name="coupon_null">您没有该类型的优惠券</string>
    <!--login-->
    <string name="pleasephone">请输入手机号码</string>
    <string name="pleasepwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="sign">注册</string>
    <string name="forget">忘记密码？</string>
    <string name="enter">确定</string>
    <string name="sendcode">获取验证码</string>
    <string name="pleasecode">请输入验证码</string>
    <string name="pleaseforpwd">请输入6-18位英文和数字混合密码</string>
    <string name="pleaseforrepwd">再次输入密码</string>
    <string name="pleaseshare">请输入邀请码（选填）</string>
    <string name="forsuccess">找回密码成功！</string>
    <string name="signsuccess">注册成功！</string>
    <string name="hasname">已有账号</string>
    <string name="argee">我同意</string>
    <string name="protocol">《油品惠协议》</string>
    <!--shop-->
    <string name="lll_shop">积分商城</string>
    <string name="nowpay">立即购买</string>
    <string name="nowexchange">立即兑换</string>
    <string name="product">产品详情</string>
    <string name="commodity">商品详情</string>
    <string name="paysuss0">支付成功</string>
    <string name="paysuss1">请您在“我的订单”及时查看</string>
    <string name="paysuss2">并在xx加油站及时兑换</string>
    <!--perfect-->
    <string name="userinfo">个人信息</string>
    <string name="carinfo">车辆信息</string>
    <string name="headinfo">(点击修改头像)</string>
    <string name="username">账号</string>
    <string name="usernike">昵称</string>
    <string name="usersex">性别</string>
    <string name="modify">修改信息</string>
    <string name="brand">品牌</string>
    <string name="platenumber">车牌号</string>
    <string name="plateage">车年份</string>
    <string name="platemin">行驶公里数</string>
    <string name="pleaseplatenumber">请填写车牌号</string>
    <string name="pleaseplatemin">请输入当前行驶公里数</string>
    <string name="subsucce">完善信息成功</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <!--order-->
    <string name="integral1">积分：</string>
    <string name="ordernumder1">订单号：</string>
    <string name="orderenter">确认收货</string>
    <!--card-->
    <string name="yuan">元</string>
    <string name="oilcard">加油券</string>
    <string name="shopcard">商品券</string>
    <string name="paycard">现金券</string>
    <string name="carcard">洗车券</string>
    <!--bbs-->
    <string name="newreturn">您有最新回复</string>
    <string name="tofen">邀请好友</string>
    <string name="myfen">我的邀请</string>
    <string name="pleaseqr">请工作人员扫一扫</string>
    <string name="pleasesc">商家已扫二维码，请对商家做出评价</string>
    <string name="pleaseev">请输入您对商家的评价</string>
    <string name="addgame">加入游戏</string>
    <string name="getlll">获得积分：</string>
    <string name="submit">提交</string>
    <string name="comment">评论</string>
    <string name="subcomment">写评论...</string>
    <string name="authorcomment">作者回复</string>
    <string name="reward">奖励</string>
    <string name="lll">积分</string>
    <!--WX-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>\
    <!--//1.1-->
    <string name="cancel">取消</string>
    <string name="pick_photo">从相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="search">搜索</string>
    <string name="binding">绑定</string>
    <string name="stock_">库存：</string>
    <string name="lllnum">积分总余额：</string>
    <string name="valid_until">有效期至</string>
</resources>
