<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginLock"
            type="com.lhkj.cgj.lock.LoginLock" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bak">

        <include
            android:id="@+id/include3"
            layout="@layout/app_bar"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/icon_user" />

            <EditText
                android:id="@+id/login_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pleasephone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={loginLock.loginData.loginName}"
                android:textColorHint="@color/gray_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="1dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/icon_pwd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pleasepwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={loginLock.loginData.loginPwd}"
                android:textColorHint="@color/gray_hint" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/main_color"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="@{()->loginLock.login()}"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout13" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/maintext_radius"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="@{()->loginLock.sign()}"
            android:padding="12dp"
            android:text="@string/sign"
            android:textColor="@color/main_color"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:onClick="@{()->loginLock.forget()}"
            android:text="@string/forget"
            android:textColor="@color/main_color"
            app:layout_constraintLeft_toLeftOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />
    </android.support.constraint.ConstraintLayout>

</layout>