<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="setLock"
            type="com.lhkj.cgj.lock.SetLock"/>
    </data>
   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/bak">

       <include
           layout="@layout/app_bar"
           android:layout_width="0dp"
           android:layout_height="70dp"
           android:layout_marginLeft="0dp"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginRight="0dp"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:layout_marginTop="0dp"
           android:id="@+id/include2" />

       <LinearLayout

           android:id="@+id/linearLayout9"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginLeft="0dp"
           android:layout_marginRight="0dp"
           android:layout_marginTop="10dp"
           android:background="@color/white"
           android:gravity="center_horizontal|center_vertical"
           android:orientation="horizontal"
           android:visibility="gone"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/include2">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/sendmsg"
               android:textColor="@color/gray_text" />

           <com.lhkj.cgj.spirit.IosLikeToggleButton
               android:id="@+id/tog_button"
               android:layout_width="54dp"
               android:layout_height="32dp"
               android:onClick="@{()->setLock.sendMsg()}"
               android:padding="4dp"
               app:on_color="@color/main_color" />
       </LinearLayout>
       <LinearLayout
           android:onClick="@{()->setLock.cleanCache()}"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:background="@color/white"
           android:gravity="center_horizontal|center_vertical"
           android:layout_marginLeft="0dp"
           android:layout_marginRight="0dp"
           android:orientation="horizontal"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           android:layout_marginTop="1dp"
           app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
           android:id="@+id/linearLayout10">

           <TextView
               android:layout_marginLeft="12dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/ccache"
               android:textColor="@color/gray_text" />

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="11dp"
               app:srcCompat="@mipmap/icon_right" />
       </LinearLayout>
       <LinearLayout
           android:onClick="@{()->setLock.about()}"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:background="@color/white"
           android:gravity="center_horizontal|center_vertical"
           android:layout_marginLeft="0dp"
           android:layout_marginRight="0dp"
           android:orientation="horizontal"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           android:layout_marginTop="10dp"
           app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
           android:id="@+id/linearLayout11">

           <TextView
               android:layout_marginLeft="12dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/about"
               android:textColor="@color/gray_text" />

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="11dp"
               app:srcCompat="@mipmap/icon_right" />
       </LinearLayout>
       <LinearLayout
           android:onClick="@{()->setLock.edition()}"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:background="@color/white"
           android:gravity="center_horizontal|center_vertical"
           android:layout_marginLeft="0dp"
           android:layout_marginRight="0dp"
           android:orientation="horizontal"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintHorizontal_bias="1.0"
           android:layout_marginTop="1dp"
           app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

           <TextView
               android:layout_marginLeft="12dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/edition"
               android:textColor="@color/gray_text" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="11dp"
               android:text="1.0" />
       </LinearLayout>

       <TextView
           android:onClick="@{()->setLock.exit()}"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginBottom="8dp"
           android:layout_marginLeft="0dp"
           android:layout_marginRight="0dp"
           android:background="@color/white"
           android:text="@string/exit"
           android:textColor="@color/main_color"
           android:paddingBottom="12dp"
           android:paddingTop="12dp"
           android:gravity="center_horizontal|center_vertical"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent" />
   </android.support.constraint.ConstraintLayout>

</layout>