<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signLock"
            type="com.lhkj.cgj.lock.SignLock"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include3"
            layout="@layout/app_bar"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/icon_phone"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pleasephone"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={signLock.signData.signPhone}"
                android:textColorHint="@color/gray_hint"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:srcCompat="@color/line"/>

            <TextView
                android:id="@+id/sendcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:onClick="@{()->signLock.sendCode()}"
                android:padding="12dp"

                android:text="@string/sendcode"
                android:textColor="@color/main_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/icon_code"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pleasecode"
                android:maxLength="6"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={signLock.signData.signCode}"
                android:textColorHint="@color/gray_hint"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/icon_pwd"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pleaseforpwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={signLock.signData.signPwd}"
                android:textColorHint="@color/gray_hint"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/icon_pwd"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pleaseforrepwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={signLock.signData.signRepwd}"
                android:textColorHint="@color/gray_hint"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/icon_pron"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/pleaseshare"
                android:inputType="number"
                android:maxLength="7"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={signLock.signData.signShare}"
                android:textColorHint="@color/gray_hint"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="@={signLock.signData.isArgee}"
                android:text="@string/argee"
                android:textColor="@color/gray_text"
                android:textSize="12sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->signLock.showProtocol()}"
                android:text="@string/protocol"
                android:textColor="@color/main_color"
                android:textSize="12sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/main_color"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="@{()->signLock.next()}"
            android:padding="12dp"
            android:text="注册登录"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll16"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/maintext_radius"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="@{()->signLock.sign()}"
            android:padding="12dp"
            android:text="@string/hasname"
            android:textColor="@color/main_color"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/whitebak"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout15">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/chenumber"/>

            <TextView
                android:id="@+id/sign_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:onClick="@{()->signLock.changeAftPlateNumber()}"
                android:padding="12dp"
                android:textColor="@color/pop_balck"
                android:textSize="18sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->signLock.changeAftPlateNumber()}"
                app:srcCompat="@mipmap/icon_bottom"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@color/line"/>

            <EditText
                android:id="@+id/platenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                android:hint="@string/pleaseplatenumber"
                android:maxLength="6"
                android:textColorHint="@color/gray_hint"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@mipmap/oil_type"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="加油类型:"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:textSize="18sp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/sign_ranliao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:onClick="@{()->signLock.selectRanliao()}"
                android:padding="12dp"
                android:textColor="@color/pop_balck"
                android:textSize="18sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->signLock.selectRanliao()}"
                app:srcCompat="@mipmap/icon_bottom"/>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>